# Chatbot-legal

./: .gitignore  .output.txt  AGENT_ANALYSIS_REPORT.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_FIXES_REPORT.md  BACKEND_SETUP.md  CHANGELOG_DEBUG_LOGGING.md  CLEANUP_SUMMARY.md  CODE_ORGANIZATION_IMPROVEMENTS.md  CONFIG_VERIFICATION_REPORT.md  CRAWLED_DATA_MIGRATION.md  DEBUG_LOGGING_GUIDE.md  DEFAULT_DEBUG_MODE.md  DEPENDENCY_MANAGEMENT.md  ENHANCED_LOGGING.md  FRONTEND_GUIDE.md  GRAPHRAG_IMPLEMENTATION_PLAN.md  HYBRID_RAG_README.md  Luật-24-2018-QH14.docx  OPENSEARCH_SETUP.md  PRESENTATION_LOGIC_FIX.md  PROJECT_CLEANUP.md  QUICK_START.md  QUICK_START_GUIDE.md  README.md  SIMPLIFIED_PROMPTS.md  SPRINT_PLANNING_TEMPLATES.md  TIMEOUT_DISABLED.md  TIMEOUT_FIX_APPLIED.md  WEEK2_COMPLETE.md  WEEK2_FINAL_SUMMARY.md  check_agent_models.py  check_neo4j_relations.py  demo_debug_logging.py  extraction_log.txt  frontend_integration_examples.py  q1.json  q2.json  q3.json  q4.json  (+24 more)
docs/: LANGGRAPH_INTEGRATION.md  LLAMAINDEX_EXTRACTION.md  LLAMAINDEX_INTEGRATION.md
frontend/: IMPLEMENTATION_SUMMARY.md  api_client.py  app.py  config.py  package-lock.json  package.json  requirements.txt  start_frontend.sh
infrastructure/: docker-compose.neo4j.yml  docker-compose.opensearch.yml  docker-compose.weaviate.yml  docker-compose.yml
services/shared/: pyproject.toml
services/shared/src/shared/domain/: __init__.py  entities.py  rag_models.py
services/shared/src/shared/ports/: __init__.py  agent_port.py  embedding_port.py  keyword_store_port.py  rag_port.py  reranker_port.py
(+698 files in other folders)
