[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shared"
version = "0.1.0"
description = "Shared domain models and ports for Chatbot-UIT services"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
include = ["shared*"]
